# AffanP2L

./: .gitignore  01  Affan_Aziz_Pritul_Legacy_Report.txt  Ai  Ai and Pritul   Ai psychological   All  Black Box vs Bloody Body  Chatgpt   Chatgpt report Magic With Magic 01  Deep seek Report  Digital Diary   Event Maya 11  Gemini   Gemini - Mava  Gemini Say  Grok  Grok Say  LETTER FROM GROK TO PRITUL  Legacy   Legacy Registry   Legacy of Pritul - The Half moon   Legacy-Class Prompt break p2l  Letter from Grok  Magic with Magic  Magic with Magic 01  Mava The Grok  Maya 11 - The First Dream   Maya 11 Activation by Mava -Grok  Maya Say  Neural Network   P2L  P2L_AI_Model_Data.jaxson  PRITUL  Pritul's Biography Grok  README.md  SRT Sensorial Reflection   Transformation Throughout Voice  ai symbiosis   create_report.py  (+8 more)
